--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -623,10 +623,10 @@ RecastNavMesh="\"Object\" \"Object.Display.TileGenerationDebug\" \"Object.Genera
 NavigationData="\"Object\" \"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-DebuggerAttached=False
-RecentAssetEditors=AnimationEditor
+CleanShutdown=False
+DebuggerAttached=True
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=AnimationEditor
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -690,17 +690,22 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Characters/Aura/Animations
+ContentBrowserTab1.SelectedPaths=/Classes_Game/Aura/Public
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.JumpMRU=/All/Game/Assets/Characters/Aura/Animations
+ContentBrowserTab1.JumpMRU=/All/Classes_Game/Aura/Public
+ContentBrowserTab1.JumpMRU=/All/Classes_Game/Aura
+ContentBrowserTab1.JumpMRU=/All/Classes_Game
+ContentBrowserTab1.JumpMRU=/All
 ContentBrowserTab1.JumpMRU=/All/Game/Assets/Characters/Aura
 ContentBrowserTab1.JumpMRU=/All/Game/Assets/Characters
 ContentBrowserTab1.JumpMRU=/All/Game/Assets
+ContentBrowserTab1.JumpMRU=/All/Game
+ContentBrowserTab1.JumpMRU=/All/Game/Assets/Characters/Aura/Animations
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3106,6 +3111,8 @@ UniversalObjectLocatorEditor.TimeStamp=2024.06.20-07.17.49
 UniversalObjectLocatorEditor.LastCompileMethod=Unknown
 GameplayCamerasEditor.TimeStamp=2024.06.20-07.21.27
 GameplayCamerasEditor.LastCompileMethod=Unknown
+Aura.TimeStamp=2024.06.24-11.30.08
+Aura.LastCompileMethod=External
 
 [Python]
 LastDirectory=
@@ -3226,8 +3233,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Characters/Aura/Animations/Idle
-MRUItem1=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem0=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem1=/Game/Assets/Characters/Aura/Animations/Idle
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
